WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305530
RenderSearchField should not implement PopupMenuClient.
https://bugs.webkit.org/show_bug.cgi?id=305530
Summary
RenderSearchField should not implement PopupMenuClient.
Megan Gardner
Reported
2026-01-14 19:04:05 PST
RenderSearchField should not implement PopupMenuClient.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-14 19:04:13 PST
<
rdar://problem/168190761
>
Megan Gardner
Comment 2
2026-01-14 19:09:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56609
EWS
Comment 3
2026-01-16 12:34:42 PST
Committed
305728@main
(757d6002fa59): <
https://commits.webkit.org/305728@main
> Reviewed commits have been landed. Closing PR #56609 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug