Cherry-pick 757d6002fa59. rdar://168580580

RenderSearchField should not implement PopupMenuClient.
    https://bugs.webkit.org/show_bug.cgi?id=305530
    rdar://168190761

    Reviewed by Wenson Hsieh.

    Continuing the work started in 305556@main
    to move PopupMenuClient for stability because
    renderers cannot be ref counted, and thus will
    crash if they've already been destroyed.

    * Source/WebCore/html/SearchInputType.cpp:
    (WebCore::SearchInputType::valueChanged):
    (WebCore::SearchInputType::itemText const):
    (WebCore::SearchInputType::itemLabel const):
    (WebCore::SearchInputType::itemIcon const):
    (WebCore::SearchInputType::itemIsEnabled const):
    (WebCore::SearchInputType::itemStyle const):
    (WebCore::SearchInputType::menuStyle const):
    (WebCore::SearchInputType::clientInsetLeft const):
    (WebCore::SearchInputType::clientInsetRight const):
    (WebCore::SearchInputType::clientPaddingLeft const):
    (WebCore::SearchInputType::clientPaddingRight const):
    (WebCore::SearchInputType::listSize const):
    (WebCore::SearchInputType::popupSelectedIndex const):
    (WebCore::SearchInputType::popupDidHide):
    (WebCore::SearchInputType::itemIsSeparator const):
    (WebCore::SearchInputType::itemIsLabel const):
    (WebCore::SearchInputType::itemIsSelected const):
    (WebCore::SearchInputType::setTextFromItem):
    (WebCore::SearchInputType::fontSelector const):
    (WebCore::SearchInputType::hostWindow const):
    (WebCore::SearchInputType::createScrollbar):
    (WebCore::SearchInputType::addSearchResult):
    * Source/WebCore/html/SearchInputType.h:
    * Source/WebCore/rendering/RenderSearchField.cpp:
    (WebCore::RenderSearchField::showPopup):
    (WebCore::RenderSearchField::recentSearches):
    (WebCore::RenderSearchField::createPopup):
    (WebCore::RenderSearchField::addSearchResult): Deleted.
    (WebCore::RenderSearchField::valueChanged): Deleted.
    (WebCore::RenderSearchField::itemText const): Deleted.
    (WebCore::RenderSearchField::itemLabel const): Deleted.
    (WebCore::RenderSearchField::itemIcon const): Deleted.
    (WebCore::RenderSearchField::itemIsEnabled const): Deleted.
    (WebCore::RenderSearchField::itemStyle const): Deleted.
    (WebCore::RenderSearchField::menuStyle const): Deleted.
    (WebCore::RenderSearchField::listSize const): Deleted.
    (WebCore::RenderSearchField::popupSelectedIndex const): Deleted.
    (WebCore::RenderSearchField::itemIsSeparator const): Deleted.
    (WebCore::RenderSearchField::itemIsLabel const): Deleted.
    (WebCore::RenderSearchField::itemIsSelected const): Deleted.
    (WebCore::RenderSearchField::setTextFromItem): Deleted.
    (WebCore::RenderSearchField::createScrollbar): Deleted.
    * Source/WebCore/rendering/RenderSearchField.h:

    Canonical link: https://commits.webkit.org/305728@main

Cherry-pick 757d6002fa59. rdar://168580580

    RenderSearchField should not implement PopupMenuClient.
    https://bugs.webkit.org/show_bug.cgi?id=305530
    rdar://168190761

    Reviewed by Wenson Hsieh.

    Continuing the work started in 305556@main
    to move PopupMenuClient for stability because
    renderers cannot be ref counted, and thus will
    crash if they've already been destroyed.

    * Source/WebCore/html/SearchInputType.cpp:
    (WebCore::SearchInputType::valueChanged):
    (WebCore::SearchInputType::itemText const):
    (WebCore::SearchInputType::itemLabel const):
    (WebCore::SearchInputType::itemIcon const):
    (WebCore::SearchInputType::itemIsEnabled const):
    (WebCore::SearchInputType::itemStyle const):
    (WebCore::SearchInputType::menuStyle const):
    (WebCore::SearchInputType::clientInsetLeft const):
    (WebCore::SearchInputType::clientInsetRight const):
    (WebCore::SearchInputType::clientPaddingLeft const):
    (WebCore::SearchInputType::clientPaddingRight const):
    (WebCore::SearchInputType::listSize const):
    (WebCore::SearchInputType::popupSelectedIndex const):
    (WebCore::SearchInputType::popupDidHide):
    (WebCore::SearchInputType::itemIsSeparator const):
    (WebCore::SearchInputType::itemIsLabel const):
    (WebCore::SearchInputType::itemIsSelected const):
    (WebCore::SearchInputType::setTextFromItem):
    (WebCore::SearchInputType::fontSelector const):
    (WebCore::SearchInputType::hostWindow const):
    (WebCore::SearchInputType::createScrollbar):
    (WebCore::SearchInputType::addSearchResult):
    * Source/WebCore/html/SearchInputType.h:
    * Source/WebCore/rendering/RenderSearchField.cpp:
    (WebCore::RenderSearchField::showPopup):
    (WebCore::RenderSearchField::recentSearches):
    (WebCore::RenderSearchField::createPopup):
    (WebCore::RenderSearchField::addSearchResult): Deleted.
    (WebCore::RenderSearchField::valueChanged): Deleted.
    (WebCore::RenderSearchField::itemText const): Deleted.
    (WebCore::RenderSearchField::itemLabel const): Deleted.
    (WebCore::RenderSearchField::itemIcon const): Deleted.
    (WebCore::RenderSearchField::itemIsEnabled const): Deleted.
    (WebCore::RenderSearchField::itemStyle const): Deleted.
    (WebCore::RenderSearchField::menuStyle const): Deleted.
    (WebCore::RenderSearchField::listSize const): Deleted.
    (WebCore::RenderSearchField::popupSelectedIndex const): Deleted.
    (WebCore::RenderSearchField::itemIsSeparator const): Deleted.
    (WebCore::RenderSearchField::itemIsLabel const): Deleted.
    (WebCore::RenderSearchField::itemIsSelected const): Deleted.
    (WebCore::RenderSearchField::setTextFromItem): Deleted.
    (WebCore::RenderSearchField::createScrollbar): Deleted.
    * Source/WebCore/rendering/RenderSearchField.h:

    Canonical link: https://commits.webkit.org/305728@main

Identifier: 305413.146@safari-7624-branch